# c-py-practice

./: .gitlab-ci.yml  .gitmodules  README.md
.jqr/: info.json
exercises/C/: README.md
exercises/C/3.1.10/: .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/3.1.13/: CMakeLists.txt
exercises/C/3.1.15/: .gitignore  .junit-expected.yaml  README.md
exercises/C/3.1.16/: .junit-expected.yaml  CMakeLists.txt
exercises/C/3.1.24/: .junit-expected.yaml  CMakeLists.txt
exercises/C/3.1.24/include/: threadpool.h
exercises/C/3.1.24/libmalloc/: CMakeLists.txt  libmalloc.c
exercises/C/3.1.24/tests/: main_tests.c
exercises/C/3.1.4/: CMakeLists.txt
exercises/C/3.1.5/: CMakeLists.txt
exercises/C/3.1.6/: CMakeLists.txt
exercises/C/3.1.6/tests/: args_test.h  main_tests.c
exercises/C/3.1.7/: .gitignore
exercises/C/3.1.8/: .gitignore  .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/3.1.9/: .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/3.3.2/: .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/3.3.2/Common/: CMakeLists.txt
exercises/C/3.3.2/Common/test_wrap_assert/: test_wrap_assert.c  test_wrap_assert.h
exercises/C/3.3.2/Common/wrap_assert/: wrap_assert.c  wrap_assert.h
exercises/C/3.3.2/include/: LinkedList.h
exercises/C/3.3.2/src/: LinkedList.c
exercises/C/3.3.2/tests/: LinkedList_test.c  main_tests.c
exercises/C/3.3.3/: .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/3.3.3/include/: doubly_linked_lists.h
exercises/C/3.3.3/src/: doubly_linked_lists.c
exercises/C/3.3.3/tests/: doubly_linked_lists_test.c  doubly_linked_lists_test.h  main_tests.c
exercises/C/3.3.8/: CMakeLists.txt
exercises/C/3.3.9/: .junit-expected.yaml  README.md
exercises/C/4.1.12/: .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/4.1.13/: .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/4.1.13/include/: broadcast_udp.h  converse_tcp.h  converse_udp.h  helper.h  jqr_conditionals.h  send_tcp.h  send_udp.h  send_unix.h  set_hostname.h
exercises/C/4.1.13/libhostname/: CMakeLists.txt  hostname.c  hostname.h
exercises/C/4.1.13/src/: broadcast_udp.c  converse_tcp.c  converse_udp.c  send_tcp.c  send_udp.c  send_unix.c  set_hostname.c
exercises/C/4.1.13/tests/: common.c  common.h  test_broadcast_udp.c  test_broadcast_udp.h  test_check_functions.c  test_check_functions.h  test_converse_tcp.c  test_converse_tcp.h  test_converse_udp.c  test_send_tcp.h  test_send_udp.c  test_send_udp.h  test_send_unix.c  test_send_unix.h  test_set_hostname.c
exercises/C/4.1.14/: .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/4.1.15/: .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/4.1.16/: CMakeLists.txt
exercises/C/4.1.22/: Makefile  env.c
exercises/C/4.1.24/: README.md
exercises/C/4.1.3/: CMakeLists.txt
exercises/C/4.1.5/: CMakeLists.txt
exercises/C/4.1.5/src/: arrays.c
exercises/C/4.1.7/: .junit-expected.yaml  README.md
exercises/C/4.1.8/: .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/4.1.8/src/: file_io.c  file_io.c~
exercises/C/4.1.8/tests/: file_io_test.c  main_tests.c
exercises/C/4.3.2/: .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/4.3.3/: CMakeLists.txt
exercises/C/4.3.4/: .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/4.3.5/: .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/4.3.6/: .junit-expected.yaml  README.md
exercises/C/4.3.7/: CMakeLists.txt
exercises/C/4.3.8/: .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/4.3.9/: .junit-expected.yaml  CMakeLists.txt
exercises/C/4.5.2/: .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/4.6.2/: CMakeLists.txt
exercises/C/4.8/: CMakeLists.txt
exercises/Knowledge/3.1.1/: .junit-expected.yaml  3.1.1.a.jqr  3.1.1.a.jqr.response.yaml  3.1.1.b.jqr  3.1.1.b.jqr.response.yaml  3.1.1.c.jqr  3.1.1.c.jqr.response.yaml  3.1.1.d.jqr  3.1.1.d.jqr.response.yaml  3.1.1.e.jqr  3.1.1.e.jqr.response.yaml  3.1.1.f.jqr  3.1.1.f.jqr.response.yaml  3.1.1.g.jqr  3.1.1.g.jqr.response.yaml  3.1.1.h.jqr  3.1.1.h.jqr.response.yaml  3.1.1.i.jqr  3.1.1.i.jqr.response.yaml  3.1.1.j.jqr  3.1.1.j.jqr.response.yaml  3.1.1.k.jqr  3.1.1.k.jqr.response.yaml  3.1.1.l.jqr  3.1.1.l.jqr.response.yaml  3.1.1.m.jqr  3.1.1.m.jqr.response.yaml  3.1.1.n.jqr  3.1.1.n.jqr.response.yaml  3.1.1.o.jqr  3.1.1.o.jqr.response.yaml  3.1.1.p.jqr  3.1.1.p.jqr.response.yaml  3.1.1.q.jqr  3.1.1.q.jqr.response.yaml  3.1.1.r.jqr  3.1.1.r.jqr.response.yaml  3.1.1.s.jqr  3.1.1.s.jqr.response.yaml  README.md
exercises/Knowledge/3.1.17/: .junit-expected.yaml  3.1.17.a.jqr  3.1.17.a.jqr.response.yaml  3.1.17.b.jqr  3.1.17.b.jqr.response.yaml  3.1.17.c.jqr  3.1.17.c.jqr.response.yaml  3.1.17.d.jqr  3.1.17.d.jqr.response.yaml  3.1.17.e.jqr  3.1.17.e.jqr.response.yaml  README.md
exercises/Knowledge/3.1.19/: .junit-expected.yaml  3.1.19.a.jqr  3.1.19.a.jqr.response.yaml  3.1.19.b.jqr  3.1.19.b.jqr.response.yaml  3.1.19.c.jqr  3.1.19.c.jqr.response.yaml  3.1.19.d.jqr  3.1.19.d.jqr.response.yaml  3.1.19.e.jqr  3.1.19.e.jqr.response.yaml  3.1.19.f.jqr  3.1.19.f.jqr.response.yaml  README.md  quiz.py
exercises/Knowledge/3.1.2/: .junit-expected.yaml  3.1.2.a.jqr  3.1.2.a.jqr.response.yaml  3.1.2.b.jqr  3.1.2.b.jqr.response.yaml  3.1.2.c.jqr  3.1.2.c.jqr.response.yaml  3.1.2.d.jqr  3.1.2.d.jqr.response.yaml  README.md  exercise.sh
exercises/Knowledge/3.1.23/: 3.1.23.a.jqr  (+29 more)
exercises/bsle-prep/: .gitignore  CMakeLists.txt
exercises/bsle-prep/include/: test.h  test.h.in
exercises/bsle-prep/ll/: CMakeLists.txt
exercises/bsle-prep/ll/include/: ll.h
exercises/bsle-prep/ll/src/: ll.c
exercises/bsle-prep/netpoll/include/: netpoll.h
exercises/bsle-prep/netpoll/src/: netpoll.c
exercises/bsle-prep/src/: test.c
exercises/bsle-prep/threadpool/include/: threadpool.h
exercises/bsle-prep/threadpool/src/: threadpool.c
export/: basic_ccd_jqr_module_3.yaml  build.py  jqr.template.adoc  jqr_info.adoc  parse_exercises.py
scripts/: build.sh  check_expected.py  grade.py  oracle_grade.py
(+394 files in other folders)
